--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "./node_modules/@tsconfig/next/tsconfig.json",
+	"extends": "@tsconfig/next/tsconfig.json",
 	"compilerOptions": {
 		"target": "esnext",
 		"outDir": "./dist",
