--- a/package.json
+++ b/package.json
@@ -37,8 +37,12 @@
 		"DOM",
 		"Event"
 	],
+	"dependencies": {
+		"js-cookie": "^3.0.5"
+	},
 	"devDependencies": {
 		"@tsconfig/next": "^2.0.1",
+		"@types/js-cookie": "^3.0.6",
 		"@types/jsdom": "^21.1.6",
 		"@types/mocha": "^10.0.6",
 		"@types/node": "^20.10.4",
