--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,9 @@
 	"[typescript]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
+	"[scss]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
 	"[json]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
@@ -33,7 +36,13 @@
 		"source.fixAll": "explicit",
 		"source.organizeImports": "explicit"
 	},
-	"eslint.format.enable": true,
+	"eslint.enable": true,
+	"eslint.format.enable": false,
 	"prettier.configPath": ".prettierrc.cjs",
-	"prettier.ignorePath": ".prettierignore"
+	"prettier.ignorePath": ".prettierignore",
+	"css.validate": false,
+	"less.validate": false,
+	"scss.validate": false,
+	"stylelint.enable": true,
+	"stylelint.validate": ["css", "scss"]
 }
