--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
 		"access": "public"
 	},
 	"engines": {
-		"node": "18.x || 20.x"
+		"node": "20.x || 22.x"
 	},
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"scripts": {
 		"freshlock": "rm -rf node_modules/ && rm .yarn/install-state.gz && rm yarn.lock && yarn",
-		"eslint-check": "eslint . --ext .js,.jsx,.ts,.tsx",
-		"eslint-fix": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
+		"eslint-check": "eslint",
+		"eslint-fix": "eslint --fix",
 		"prettier-check": "prettier --check .",
 		"prettier-fix": "prettier --write .",
 		"test": "NODE_OPTIONS='--loader=ts-node/esm' mocha",
@@ -41,22 +41,23 @@
 		"js-cookie": "^3.0.5"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.4.0",
 		"@tsconfig/next": "^2.0.3",
 		"@types/js-cookie": "^3.0.6",
-		"@types/jsdom": "^21.1.6",
+		"@types/jsdom": "^21.1.7",
 		"@types/mocha": "^10.0.6",
-		"@types/node": "^20.12.12",
-		"@typescript-eslint/eslint-plugin": "^7.11.0",
-		"@typescript-eslint/parser": "^7.11.0",
-		"eslint": "^8.57.0",
+		"@types/node": "^20.14.2",
+		"@types/yargs": "^17.0.32",
+		"eslint": "^9.4.0",
 		"eslint-config-prettier": "^9.1.0",
+		"globals": "^15.4.0",
 		"jsdom": "^24.1.0",
 		"mocha": "^10.4.0",
-		"prettier": "^3.2.5",
-		"ts-loader": "^9.5.1",
+		"prettier": "^3.3.2",
 		"ts-node": "^10.9.2",
 		"typedoc": "^0.25.13",
-		"typescript": "^5.4.5"
+		"typescript": "^5.4.5",
+		"typescript-eslint": "^8.0.0-alpha.30"
 	},
-	"packageManager": "yarn@4.2.2"
+	"packageManager": "yarn@4.3.0"
 }
