--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"access": "public"
 	},
 	"engines": {
-		"node": "20.x || 22.x"
+		"node": "20.x || 22.x || 24.x"
 	},
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
