--- a/.github/workflows/quality-control.yml
+++ b/.github/workflows/quality-control.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "22.19.0"
+          package-manager-cache: false
 
       - name: Install
         run: npm install
@@ -49,6 +50,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          package-manager-cache: false
 
       - name: Install
         run: npm install
