--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"access": "public"
 	},
 	"engines": {
-		"node": "20.x || 22.x || 24.x"
+		"node": "22.x || 24.x"
 	},
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
@@ -46,7 +46,7 @@
 		"@types/js-cookie": "^3.0.6",
 		"@types/jsdom": "^27.0.0",
 		"@types/mocha": "^10.0.10",
-		"@types/node": "^22.18.12",
+		"@types/node": "^24.9.1",
 		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
 		"globals": "^16.4.0",
